--- a/more.html
+++ b/more.html
@@ -45,7 +45,7 @@
         </div>
 
         <header class="more__header">
-          <div class="more__header__profile">
+          <a href="profile.html" class="more__header__profile">
             <img src="images/col.png" alt="">
             <div class="more__header__info">
               <h3 class="header__title">
@@ -55,7 +55,7 @@
                 banjag954@naver.com
               </span>
             </div>
-          </div>
+          </a>
           <i class="far fa-comment-alt fa-2x"></i>
         </header>
 
