--- a/more.html
+++ b/more.html
@@ -2,12 +2,20 @@
   <html lang="en">
     <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, user-scalable=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <meta name="viewport" content="width=device-width, user-scalable=no">
+      <meta name="apple-mobile-web-app-capable" content="yes"> <!--Safari-->
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!--Safari-->
+      <meta http-equiv="X-UA-Compatible" content="ie=edge"> <!--IE-->
+      <meta name="HandheldFriendly" content="true"> <!--Palm and BlackBerry devices-->
+      <meta name="MobileOptimized" content="width"> <!--Palm and BlackBerry devices-->
       <!-- Fontawesome Icons css -->
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
       <title>More</title>
       <link rel="stylesheet" href="css/style.css">
+      <!-- Chrome, Safari, IE -->
+      <link rel="shortcut icon" href="images/favicon.ico">
+      <!-- Firefox, Opera (Chrome and Safari say thanks but no thanks) -->
+      <link rel="icon" href="images/favicon.png">
     </head>
     <body>
       <header class="top-header">
