--- a/profile.html
+++ b/profile.html
@@ -3,11 +3,18 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, user-scalable=no">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <!-- Fontawesome Icons css -->
+      <meta name="apple-mobile-web-app-capable" content="yes"> <!--Safari-->
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!--Safari-->
+      <meta http-equiv="X-UA-Compatible" content="ie=edge"> <!--IE-->
+      <meta name="HandheldFriendly" content="true"> <!--Palm and BlackBerry devices-->
+      <meta name="MobileOptimized" content="width"> <!--Palm and BlackBerry devices-->
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
       <title>Profile</title>
       <link rel="stylesheet" href="css/style.css">
+      <!-- Chrome, Safari, IE -->
+      <link rel="shortcut icon" href="path/to/favicon.ico">
+      <!-- Firefox, Opera (Chrome and Safari say thanks but no thanks) -->
+      <link rel="icon" href="path/to/favicon.png">
     </head>
     <body>
       <header class="top-header top-header--transparent">
